--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "typescript-git",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "typescript-git",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"compile-typescript": "tsc",
+		"start": "node ./output/script.js"
+	},
+	"author": "",
+	"license": "ISC"
 }
