--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"compile-typescript": "tsc",
-		"start": "node ./output/script.js"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
 	"license": "ISC"
